...
        testID={testIds.profile.editButton}
        title="Edit profile"
        variant="secondary"
        onPress={() => nav.navigate('EditProfile')}
      />
      <Button
        testID="profile.followingButton"
        title="Following"
        variant="secondary"
        onPress={() => nav.navigate('Following')}
      />
      <Button
        testID="profile.premiumButton"
        title="Premium"
        variant="secondary"
        onPress={() => nav.navigate('Premium')}
      />
      <Button
        testID="profile.settingsButton"
        title="Settings"
        variant="secondary"
        onPress={() => nav.navigate('Settings')}
      />
      <Button
        testID={testIds.profile.signOutButton}
...
